--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,7 @@ dso {
 	load ngx_http_sysguard_module.so;
 }
 
+daemon off;
 error_log /home/wwwlogs/error_nginx.log crit;
 pid /var/run/nginx.pid;
 worker_rlimit_nofile 51200;
